<resources>
    <string name="app_name">DC ALERT</string>
    <string name="top_icon">TOP ICON</string>
    <string name="email">Email</string>
    <string name="password">password</string>
    <string name="login">LOGIN</string>
    <string name="register">Register</string>
    <string name="forgot_password">FORGOT PASSWORD</string>
    <string name="or">OR</string>
    <string name="google_icon">google icon</string>
    <string name="facebook_icon">facebook icon</string>
    <string name="new_user_register_now">New use? Register Now</string>
    <string name="have_an_account_login_now">Have an account Login Now</string>
</resources>